--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div>
         <h1>OMG you wont belive me but...</h1>
-        <h1 id="excuse">My dog eat my homework</h1>
+        <h1 id="excuse"></h1>
     </div>
 
 
